# familiar

./: .gitignore  .mcp.json  .steel-thread-workspace  AGENTS.md  CLAUDE.md  README.md  TEMP-20250924T120336-steel-thread-setup.md  TEMP-codereview-2025-09-23.md  package-lock.json  package.json  prd.md  raycast-env.d.ts  steel-thread-demo.txt  test-swift.sh  tsconfig.json
.cursor/rules/: claude-mcp.mdc  lint-format.mdc  project-structure.mdc  raycast-workflow.mdc  ts-react-standards.mdc
.githooks/: pre-commit
backend/: README.md  pyproject.toml
backend/scripts/: measure-context.py
backend/src/palette_sidecar/: api.py  auth_coordinator.py  auth_state.py  claude_cli.py  claude_service.py  config.py  mcp_registry.py  models.py  patterns.py  permissions.py  session_config.py  tool_manager.py  zero_state.py
backend/src/palette_sidecar/utils/: __init__.py  context_helpers.py
backend/tests/: test_auth_endpoints.py  test_query_stream.py  test_session_config.py  test_tool_manager.py  test_zero_state_endpoint.py  test_zero_state_parsing.py
docs/: 00-README.md  01-steelthread.md  02-phase2.md  integration-guide.md  polish-tooling.md  prd.md  quick-reference.md  raycast-all-docs.md  raycast-api.md  steel-thread.md  temp-zero-state-prewarm-investigation.md  visual-design-audit-prompt.md  visual-polish-plan.md  visual-polish-sprint-notes.md  visual-polish-tooling-guide.md
plans/: anthropic-max-oauth-plan.md  conversation-summary-2025-09-25.md
scripts/: copy-claude-cli.js  restart-familiar.sh  sdk-smoke.js  steel-thread-package.sh  watch-logs.sh
src/: assistant.tsx
(+703 files in other folders)
