[project]
name = "palette-sidecar"
version = "0.1.0"
requires-python = ">=3.10"
description = "FastAPI sidecar for Claude Code native palette"
readme = "README.md"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "anyio>=4.4",
  "pydantic>=2.7",
  "sse-starlette>=1.8",
  "claude-agent-sdk>=0.1.0",
  "python-dotenv>=1.0"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5.0",
  "mypy>=1.10"
]
test = [
  "pytest>=7.0",
  "pytest-asyncio>=0.21.0",
  "httpx>=0.24.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true
python_version = "3.10"
